Update about page.

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ github_username: ehpor # your GitHub user name
 twitter_username: EmielPor # your Twitter handle
 linkedin_username: emiel-por # your LinkedIn user name
 scholar_userid: #SKgE7M8AAAAJ # your Google Scholar ID
-orcid_id: #0000-0002-3961-083X # your ORCID ID
+orcid_id: 0000-0002-3961-083X # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
