--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Emiel
 middle_name: H.
 last_name: Por
-email: por@strw.leidenuniv.nl
-description: PhD candidate
+email: epor@stsci.edu
+description: Sagan Fellow
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
